Battleship - Stage 5/5: Friend or foe v5.001 * Encapsulating "draw full board" method * switching players added * removed checks on wrong shelling placement (just for stage completion purposes) * print both boards method * YAML file replaced with UML * README.md updated * general cleanup * Hyperskill test successful * This close the project!