@@ -1,18 +1,13 @@
 package battleship;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.stream.Collectors;
+import java.util.*;
 
 public class Board {
 
-    //--STATICS---------------------------------------------------------------------------------------------------------
-    //--Setting up mappings-------------------------------------------------------------------------------------------
     //------------------------------------------------------------------------------------------------------------------
-    final static String MSG_ERR_TOO_CLOSE = "Error! You placed it too close to another one. Try again:";
-    //final static String MSG_ERR_ALREADY_SHELLED = "Error! Field already shelled. Try again:";
+    //--STATICS---------------------------------------------------------------------------------------------------------
+    //------------------------------------------------------------------------------------------------------------------
+    static final String MSG_ERR_TOO_CLOSE = "Error! You placed it too close to another one. Try again:";
     static final String MSG_YOU_MISS = "You missed. Try again:";
     static final String MSG_YOU_HIT = "You hit a ship! Try again:";
     static final String MSG_YOU_HIT_AND_SANK_SHIP = "You sank a ship! Specify a new target:";
@@ -22,18 +17,18 @@ public class Board {
     final static char ICON_HIT = 'X';
     final static char ICON_MISS = 'M';
 
-    static final int boardSize = 10;
+    static final int BOARD_SIZE = 10;
 
     public static final HashMap<Integer, String> rowInt2Str = new HashMap<>() {
         {
-            for (int i = 0; i < boardSize; i++) {
+            for (int i = 0; i < BOARD_SIZE; i++) {
                 put(i, String.valueOf((char) (i + 'A')));
             }
         }
     };
     public static final HashMap<Integer, String> colInt2Str = new HashMap<>() {
         {
-            for (int i = 0; i < boardSize; i++) {
+            for (int i = 0; i < BOARD_SIZE; i++) {
                 put(i, String.valueOf(i + 1));
             }
         }
@@ -41,14 +36,14 @@ public class Board {
 
     public static final HashMap<String, Integer> rowStr2Int = new HashMap<>() {
         {
-            for (int i = 0; i < boardSize; i++) {
+            for (int i = 0; i < BOARD_SIZE; i++) {
                 put(String.valueOf((char) (i + 'A')), i);
             }
         }
     };
     public static final HashMap<String, Integer> colStr2Int = new HashMap<>() {
         {
-            for (int i = 0; i < boardSize; i++) {
+            for (int i = 0; i < BOARD_SIZE; i++) {
                 put(String.valueOf(i + 1), i);
             }
         }
@@ -68,7 +63,7 @@ public class Board {
 
     public String getBoardForDisplay(boolean fog) {
 
-        char[][] display = new char[Board.boardSize][Board.boardSize];
+        char[][] display = new char[Board.BOARD_SIZE][Board.BOARD_SIZE];
         Arrays.stream(display).forEach(row -> Arrays.fill(row, ICON_FOG));
 
         for (Area area : areas) {
@@ -98,9 +93,9 @@ public class Board {
             output.append(" ").append(s);
         }
         output.append("\n");
-        for (int row = 0; row < Board.boardSize; row++) {
+        for (int row = 0; row < Board.BOARD_SIZE; row++) {
             output.append(rowInt2Str.get(row));
-            for (int col = 0; col < Board.boardSize; col++) {
+            for (int col = 0; col < Board.BOARD_SIZE; col++) {
                 if (fog && display[row][col] == ICON_SHIP) {
                     output.append(" ").append(ICON_FOG);
                 } else {
@@ -128,11 +123,11 @@ public class Board {
     }
 
     public void processShelling(Position coordinates) {
-        var location = areas.stream()
+        List<Shelling> location = areas.stream()
                 .filter(a -> a instanceof Shelling)
                 .map(Shelling.class::cast)
                 .filter(s -> s.positions.get(0).equals(coordinates))
-                .collect(Collectors.toList());
+                .toList();
         boolean alreadyShelled = location.size() > 0;
         if (!alreadyShelled) {
             Shelling shelling = new Shelling();
@@ -142,7 +137,6 @@ public class Board {
             areas.remove(location.get(0));
             location.get(0).noOfShootsAt++;
             areas.add(location.get(0));
-//            throw new IllegalArgumentException(MSG_ERR_ALREADY_SHELLED);
         }
     }
 
@@ -172,7 +166,7 @@ public class Board {
     }
 
     public boolean allShipsShelled() {
-        return areas.stream().filter(a -> a instanceof Ship).noneMatch(s -> ((Ship) s).alive);
+        return areas.stream().filter(a -> a instanceof Ship).noneMatch(s -> ((Ship) s).isAlive());
     }
 
     enum Result {
